<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.rice.hungrice.hungrice.SearchActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_Search"
            android:id="@+id/searchTitle"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/search_by_place"
            android:id="@+id/searchByPlace" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/place_spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/search_by_food"
            android:id="@+id/searchByFood" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/food_spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/search_by_type"
            android:id="@+id/searchByType" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/type_spinner" />


        <LinearLayout android:id="@+id/container_profile" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="bottom">

            <Button
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/search_btn"
                android:id="@+id/btn_search" style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_gravity="bottom|center_horizontal" />

            <Button android:id="@+id/btn_profile" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/btn_profile"
            android:textStyle="bold"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="1dp" />

            <Button android:id="@+id/btn_checkin" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/btn_checkin"
                android:textStyle="bold"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="1dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
